--- a/webserver/package.json
+++ b/webserver/package.json
@@ -1,17 +1,20 @@
 {
   "name": "webserver",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
+  "description": "",
   "dependencies": {
-    "ejs": "^3.1.10",
-    "express": "^4.19.2"
+    "@lighthouse-web3/sdk": "^0.3.3",
+    "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7"
   }
 }
