--- a/webserver/package.json
+++ b/webserver/package.json
@@ -11,9 +11,12 @@
   "description": "",
   "dependencies": {
     "@lighthouse-web3/sdk": "^0.3.3",
+    "body-parser": "^1.20.2",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "fs": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7"
   }
