--- a/webserver/package.json
+++ b/webserver/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webserver",
+  "name": "webserver-vanillajs-modal-quick-start",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -14,6 +14,11 @@
     "body-parser": "^1.20.2",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "http-server": "^14.1.1"
+  },
+  "devDependencies": {
+    "zlib-browserify": "^0.0.3"
   }
 }
+
