--- a/webserver/package.json
+++ b/webserver/package.json
@@ -17,18 +17,12 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "fs": "^0.0.1-security",
-    "multer": "^1.4.5-lts.1",
-    "path": "^0.12.7",
-    "body-parser": "^1.20.2",
-    "dotenv": "^16.4.5",
-    "ejs": "^3.1.10",
-    "express": "^4.19.2",
+    "http-server": "^14.1.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
-    "http-server": "^14.1.1"
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "zlib-browserify": "^0.0.3"
   }
 }
-
