--- a/webserver/package.json
+++ b/webserver/package.json
@@ -20,6 +20,7 @@
     "fs": "^0.0.1-security",
     "http-server": "^14.1.1",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.14",
     "path": "^0.12.7"
   },
