--- a/webserver/package.json
+++ b/webserver/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "@lighthouse-web3/sdk": "^0.3.3",
+    "@truffle/hdwallet-provider": "^2.1.15",
     "axios": "^1.7.2",
     "body-parser": "^1.20.2",
     "date-fns": "^3.6.0",
@@ -22,7 +23,8 @@
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.14",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "web3": "^4.11.0"
   },
   "devDependencies": {
     "zlib-browserify": "^0.0.3"
